2004-02-26  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl, texi2html.init: change $DOCUMENTDESCRIPTION to
	$DOCUMENT_DESCRIPTION for consistency.
	if $ENCODING is '' don't put it in the headers.
	add a new entry to $Texi2HTML::THISDOC: 'title_texi', the title
	with texinfo @-commands.
	* examples/chm.init: don't convert to utf8 in the html files 
	generated (unless the encoding is really utf8), but produce 
	utf8 in hhc, hhk and hhp files whatever the encoding is.
	* doc/texi2html.texi: update.

2004-02-23  Patrice Dumas  <dumas@centre-cired.fr> 

	* Makefile.am: ask for a version above 1.7 for automake.
	* Makefile.in...: regenerate with automake 1.8.2 autoconf 2.59.
	* texi2tml.pl, texi2html.init, examples/chm.init: add a new variable
	$DOCUMENTDESCRIPTION. If it is undef, @documentdescription is used
	or the long title. If it is set but empty no description <meta> element
	is used, if it isn't empty, the value is used in the description
	<meta> element.

2004-02-11  Patrice Dumas  <dumas@centre-cired.fr> 

	* Makefile.am: add T2h_i18n.pm texi2html.init MySimple.pm and l2h.init
	to the distribution.

2004-02-11  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: use the manual name (file basename) as default output
	directory when split.
	* NEWS, Tests/test.sh: update.

2004-02-11  Derek Price  <derek@ximbiot.com>

	* Tests/GermanNodeTest/.cvsignore, Tests/index_table/.cvsignore,
	Tests/macros/.cvsignore, Tests/sectionning/.cvsignore,
	Tests/ccvs/.cvsignore, Tests/nodes_texinfo/.cvsignore,
	Tests/texi2html/.cvsignore, Tests/texinfo/.cvsignore,
	Tests/viper/.cvsignore, Tests/viper_monolithic/.cvsignore,
	Tests/xemacs/.cvsignore, Tests/xemacs_frame/.cvsignore,
	Tests/formatting/.cvsignore: New files to suppress warnings about files
	created by the test scripts.

2004-02-11  Derek Price  <derek@ximbiot.com>

	* Makefile.am (bin_PROGRAMS): Move...
	(bin_SCRIPTS): ...here.
	(texi2html_SOURCES): Remove unused variable.
