@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.53)
-AC_INIT([texi2html], [1.67], [users@texi2html.cvshome.org])
+AC_INIT([texi2html], [1.68], [users@texi2html.cvshome.org])
 AM_INIT_AUTOMAKE([gnu 1.7 dist-bzip2])
 
 dnl Disable Autoconf, Automake, and some other maintainer tools without the
