@@ -1,4 +1,4 @@
-@set UPDATED 7 February 2004
-@set UPDATED-MONTH February 2004
-@set EDITION 1.67
-@set VERSION 1.67
+@set UPDATED 20 March 2004
+@set UPDATED-MONTH March 2004
+@set EDITION 1.68
+@set VERSION 1.68
